--- a/client/index.html
+++ b/client/index.html
@@ -3,18 +3,24 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" href="./static/assets/wall.png">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="/static/styles/main.css">
         <title>The Wall</title>
     </head>
     <body>
         <header>
-            <h1>The Wall</h1>
+            <h1 id="headerTitle">The Wall</h1>
+            <nav class="navBar">
+                <a href="/about" class="navOption btn btn-primary" data-link>About</a>
+                <a href="/wall" class="navOption btn btn-primary" data-link>Wall</a>
+                <a href="/find" class="navOption btn btn-primary" data-link>Find</a>
+            </nav>
         </header>
-        <nav class="navBar">
-            <a href="/" class="navOption" data-link>About</a>
-            <a href="/wall" class="navOption" data-link>The Wall</a>
-        </nav>
         <div id="app"></div>
+        <footer>
+            <h6>Created by <a href="https://github.com/baileywjohnson/the-wall">Bailey Johnson</a></h6>
+        </footer>
         <script type="module" src="/static/js/index.js"></script>
     </body>
 </html>
